--- a/src/layouts/components/menu/index.module.less
+++ b/src/layouts/components/menu/index.module.less
@@ -1,10 +1,28 @@
 .container {
-  .img {
-    width: 20px;
-    height: 20px;
-    img {
-      width: 100%;
-      height: 100%;
+  display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+  .logo {
+    width: 100%;
+    display: flex;
+    padding: 18px 20px;
+    box-sizing: border-box;
+    background-color: #001529;
+    color: #fff;
+    .img {
+      width: 26px;
+      height: 26px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .title {
+      font-size: 18px;
+      margin-left: 4px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-weight: 680;
     }
   }
 }
