--- a/src/layouts/components/header/index.module.less
+++ b/src/layouts/components/header/index.module.less
@@ -6,6 +6,9 @@
   color: #fff;
   height: 62px;
   padding-inline: 25px;
+  .collapsed {
+    cursor: pointer;
+  }
   .headerLf {
     display: flex;
     align-items: center;
