--- a/src/layouts/components/menu/index.module.less
+++ b/src/layouts/components/menu/index.module.less
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	height: 100%;
+  position: relative;
   .logo {
     width: 100%;
     display: flex;
@@ -24,5 +25,12 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       font-weight: 680;
     }
+  }
+  .collapsed{
+    cursor: pointer;
+    position: absolute;
+    top: 140px;
+    right: -12px;
+    color: #eee;
   }
 }
