--- a/src/layouts/components/tabs/index.module.less
+++ b/src/layouts/components/tabs/index.module.less
@@ -14,44 +14,27 @@
           }
           .ant-tabs-tab-with-remove.ant-tabs-tab-active {
             .ant-tabs-tab-remove {
-              top: 1px;
-              margin: 7px;
+              color: #ccc;
               opacity: 1 !important;
-            }
-            .ant-tabs-tab-btn {
-              transform: translateX(-9px);
             }
           }
           .ant-tabs-tab {
             padding: 8px 22px;
+            box-sizing: border-box;
             color: #cccccc;
             background: none;
             border: none;
             transition: none;
-            .anticon-home {
-              margin-right: 7px;
-            }
             .ant-tabs-tab-remove {
-              position: absolute;
-              right: 0;
               color: #cccccc;
-              opacity: 0;
-              transition: 0.1s ease-in-out;
               &:hover {
-                color: #ff0000;
+                color: #666;
               }
             }
           }
           .ant-tabs-tab.ant-tabs-tab-with-remove {
             &:hover {
               .ant-tabs-tab-remove {
-                top: 1px;
-                margin: 7px;
-                opacity: 1;
-                transition: 0.1s ease-in-out;
-              }
-              .ant-tabs-tab-btn {
-                transform: translateX(-9px);
               }
             }
           }
