--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,39 +1,17 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
+::-webkit-scrollbar {
+  width: 6px;
+  height: 0.5rem;
+  background: hsla(0, 0%, 100%, 0.6);
 }
-html,
-body,
-div,
-section,
-h1,
-h2,
-span,
-dl,
-dt,
-dd,
-p,
-img,
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  border: none;
-  outline: none;
+::-webkit-scrollbar-track {
+  border-radius: 0;
 }
-a {
-  text-decoration: none;
+::-webkit-scrollbar-thumb {
+  background-color: rgba(95, 95, 95, 0.4);
+  transition: all 0.2s;
+  border-radius: 0.5rem;
 }
-ul,
-li {
-  list-style-type: none;
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(95, 95, 95, 0.7);
 }
-body {
-  position: relative;
-}
-
-// * {
-//   user-select: none;
-// }
 
