--- a/src/layouts/components/menu/index.module.less
+++ b/src/layouts/components/menu/index.module.less
@@ -9,8 +9,8 @@
     display: flex;
     padding: 18px 20px;
     box-sizing: border-box;
-    background-color: #001529;
-    color: #fff;
+    color: #000;
+    border-bottom: 1px solid #f0f0f0;
     .img {
       width: 26px;
       height: 26px;
