--- a/src/layouts/components/header/index.module.less
+++ b/src/layouts/components/header/index.module.less
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #001529;
-  color: #fff;
+  color: #000;
+  background-color: #fff;
   height: 62px;
   padding-inline: 25px;
   .collapsed {
