--- a/src/global.less
+++ b/src/global.less
@@ -1,7 +1,36 @@
 @import './styles/reset.less';
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import './styles/tw.less';
+
+@font-face {
+  font-family: 'YouSheBiaoTiHei';
+  src: url('@/assets/font/YouSheBiaoTiHei-2.ttf');
+}
+
+@font-face {
+  font-family: 'Alimama ShuHeiTi';
+  src: url('@/assets/font/AlimamaShuHeiTi-Bold.ttf');
+}
+@font-face {
+  font-family: 'HuXiaoBo-NanShen';
+  src: url('@/assets/font/HuXiaoBo-NanShen.otf');
+}
+@font-face {
+  font-family: 'zcool-gdh';
+  src: url('@/assets/font/zcool-gdh.ttf');
+}
+
+@font-face {
+  font-family: 'Kingsoft_Cloud_Font';
+  src: url('@/assets/font/Kingsoft_Cloud_Font.ttf');
+}
+@font-face {
+  font-family: 'D-DIN';
+  src: url('@/assets/font/D-DINExp-Bold.otf');
+}
+@font-face {
+  font-family: 'PingFang SC';
+  src: url('@/assets/font/PingFang Regular.ttf');
+}
 
 .body_container {
   padding: 20px;
